# cases

./: .gitignore
bazel/project1/: WORKSPACE
bazel/project1/main/: BUILD  hello-greet.cc  hello-world.cc  hello-world_test.cc
bazel/project2/main/: BUILD  hello.cc  print.cc  print.h
common/: CMakeLists.txt  Common.cpp  Common.h  Main.cpp
common/verify/: 2020-10-12_var_and_lock.cc
gflags/: CMakeLists.txt  config2
glog/: CMakeLists.txt  Main.cpp
grpc/: CMakeLists.txt  Client.cc  Server.cc
grpc/proto/: rpc.proto
gtest/: CMakeLists.txt  Main.cpp
jemalloc/: CMakeLists.txt  Main.cpp  config
